Refinar la configuración de CORS para todos los microservicios
Se actualizó SecurityConfig en todos los microservicios para permitir explícitamente solicitudes OPTIONS y restringir los orígenes permitidos a las URL locales del frontend. Se añadió WebConfig a cada servicio para una gestión CORS consistente mediante WebMvcConfigurer. Estos cambios mejoran la compatibilidad con CORS para el desarrollo local y garantizan una gestión adecuada de las solicitudes preflight.